# SnakeEditor

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.txt  SnakeEditor.cpp  SnakeEditor.h
Animations/: SpriteAnimator.cpp  SpriteAnimator.h
Animations/GameOver/: DyingSnakeAnimator.cpp  DyingSnakeAnimator.h
Console/: Console.cpp  Console.h
Scenes/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Scenes/Game/: GameScene.cpp  GameScene.h
Scenes/GameOver/: GameOverScene.cpp  GameOverScene.h
Scenes/Leaderboard/: LeaderboardScene.cpp  LeaderboardScene.h
Scenes/MainMenu/: MainMenuScene.cpp  MainMenuScene.h
Scenes/MainMenu/Credits/: CreditsScene.cpp  CreditsScene.h
Scenes/MainMenu/Exit/: ExitScene.cpp  ExitScene.h
Scenes/Splash/: SplashScene.cpp  SplashScene.h
Shaders/: FadeOutShader.h  StandardShader.h
State/: Config.h  GameState.cpp  GameState.h  Level.h
Utils/: ConfigUtils.cpp  ConfigUtils.h  FileNames.h  FileUtils.cpp  FileUtils.h  LeaderboardUtils.cpp  LeaderboardUtils.h  LevelUtils.cpp  LevelUtils.h  SoundUtils.cpp  SoundUtils.h  SpriteUtils.cpp  SpriteUtils.h  StringUtils.cpp  StringUtils.h  TextUtils.cpp  TextUtils.h
Windows/: SnakeEditor.rc  copy_assets.bat  copy_assets_release.bat  resource_compile.bat  run_cppcheck.bat
